API Rest y Blazor ya recibe el token

--- a/LabWebAppBlazor/appsettings.json
+++ b/LabWebAppBlazor/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "aC1risthianCh!mb0JWTKey#2025Seguro",
+    "Issuer": "LabWebApp",
+    "Audience": "LabWebAppUsers"
+  }
 }
